--- a/index.html
+++ b/index.html
@@ -44,26 +44,27 @@
                             <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
                                 <div class="row g-4">
                                     <div class="col-md-4">
-                                        <a href="management.html" class="feature-item">Transparent Fee Management</a>
+                                        <a href="fee-management.html" class="feature-item">Transparent Fee Management</a>
                                         <div class="divider"></div>
-                                        <a href="study.html" class="feature-item">Share Notes / Study Materials</a>
+                                        <a href="study-material.html" class="feature-item">Share Notes / Study Materials</a>
                                         <div class="divider"></div>
-                                        <a href="homework.html" class="feature-item">Homework & Assignments</a>
+                                        <a href="assignments.html" class="feature-item">Homework & Assignments</a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="biometric.html" class="feature-item">Biometric Attendance</a>
+                                        <a href="biometric-attendance.html" class="feature-item">Biometric Attendance</a>
                                         <div class="divider"></div>
-                                        <a href="performance.html" class="feature-item">Student Performance</a>
+                                        <a href="student-performance.html" class="feature-item">Student Performance</a>
                                         <div class="divider"></div>
                                         <a href="reports.html" class="feature-item">Insightful Reports</a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="student.html" class="feature-item">Student / Parent App</a>
+                                        <a href="app.html" class="feature-item">Student / Parent App</a>
                                         <div class="divider"></div>
-                                        <a href="reminders.html" class="feature-item">Communication & Reminders</a>
+                                        <a href="communication.html" class="feature-item">Communication & Reminders</a>
                                     </div>
                                 </div>
                             </div>
+                            
                         </li>
                         <!-- COMPANY -->
                         <li class="nav-item dropdown mx-2">
@@ -81,14 +82,14 @@
                             <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
                                 <a href="careers.html" class="feature-item">Career</a>
                                 <div class="divider"></div>
-                                <a href="team-update.html" class="feature-item">Team</a>
+                                <a href="team.html" class="feature-item">Team</a>
                                 <div class="divider"></div>
-                                <a href="about-us.html" class="feature-item">About</a>
+                                <a href="our-story.html" class="feature-item">About</a>
                             </div>
                         </li>
                         <!-- PRICING -->
                         <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="pricing.html">Pricing</a>
+                            <a class="nav-link fw-semibold" href="plans.html">Pricing</a>
                         </li>
                         <!-- RESOURCES -->
                         <li class="nav-item dropdown mx-2">
@@ -106,16 +107,16 @@
                             <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
                                 <a href="#" class="feature-item">Blogs</a>
                                 <div class="divider"></div>
-                                <a href="testimonials.html" class="feature-item">Testimonials</a>
+                                <a href="customers.html" class="feature-item">Customers</a>
                             </div>
                         </li>
                         <!-- CONTACT -->
                         <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="contact.html">Contact Us</a>
+                            <a class="nav-link fw-semibold" href="contact-us.html">Contact Us</a>
                         </li>
                         <!-- LOGIN -->
                         <li class="nav-item ms-2 ms-lg-3">
-                            <a href="login.php" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
+                            <a href="login.html" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
                                 Log In
                             </a>
                         </li>
@@ -440,7 +441,7 @@ SMS alerts for parents.." data-img="assets/image/home/Group 230.svg">
                                 <br>
                                 <span class="green">
                                     online payment options,
-                automated
+                                    automated
                                     <br>
                                     payment reminders, real time fees
                                     <br>
@@ -559,14 +560,14 @@ SMS alerts for parents.." data-img="assets/image/home/Group 230.svg">
                 <div class="row gy-4">
                     <!-- CONTACT -->
                     <div class="col-6 col-md-3 ">
-                        <h6 class="fw-bold mb-3">CONTACT</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">CONTACT</h6>
                         <p>+91-76666 62330</p>
                         <p>Support Helpdesk</p>
                         <p>Contact Us</p>
                     </div>
                     <!-- ABOUT US -->
                     <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">ABOUT US</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ABOUT US</h6>
                         <p>Blog</p>
                         <p>Engineering Blog</p>
                         <p>Careers</p>
@@ -580,33 +581,33 @@ SMS alerts for parents.." data-img="assets/image/home/Group 230.svg">
                     </div>
                     <!-- PRODUCT -->
                     <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">PRODUCT</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">PRODUCT</h6>
                         <p>Tour</p>
                         <p>Plans & Pricing</p>
                         <p>Security</p>
-                        <h6 class="fw-bold mt-4 mb-3">EXTRAS</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;margin-top: 35px;">EXTRAS</h6>
                         <p>Download Attendpro</p>
                         <p>Examjoy</p>
                         <p>Download TeamViewer</p>
                     </div>
                     <!-- ADMIN APP + RESOURCES -->
                     <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">ADMIN APP</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ADMIN APP</h6>
                         <img
                             src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
                             class="img-fluid mb-2"
                             width="130"
                             alt="image"
                             loading="lazy"
-                        >
+                        ><br>
                         <img
                             src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
                             class="img-fluid mb-4"
                             width="130"
                             alt="image"
                             loading="lazy"
-                        >
-                        <h6 class="fw-bold mb-3">RESOURCES</h6>
+                        > 
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">RESOURCES</h6>
                         <p>Free Resources</p>
                         <p>Case Studies</p>
                     </div>
@@ -654,5 +655,53 @@ SMS alerts for parents.." data-img="assets/image/home/Group 230.svg">
         });
     });
         </script>
-    </body>
+        <script>
+document.querySelectorAll(".feature-btn").forEach(btn => {
+    btn.addEventListener("click", function () {
+
+        let newText = this.getAttribute("data-text");
+        let newImg = this.getAttribute("data-img");
+
+        let textBox = document.getElementById("featureText");
+        let imgBox = document.getElementById("featureImage");
+        let buttonBox = document.querySelector(".learn-btn");
+
+        // Step 1: Animate OUT
+        textBox.classList.add("animate-out");
+        imgBox.classList.add("animate-out");
+        buttonBox.classList.add("animate-out");
+
+        // Preload new image
+        const preload = new Image();
+        preload.src = newImg;
+
+        preload.onload = function () {
+
+            setTimeout(() => {
+                // Step 2: Change content AFTER animation
+                textBox.innerHTML = newText;
+                imgBox.src = newImg;
+
+                // Step 3: Animate IN
+                textBox.classList.remove("animate-out");
+                imgBox.classList.remove("animate-out");
+                buttonBox.classList.remove("animate-out");
+
+                textBox.classList.add("animate-in");
+                imgBox.classList.add("animate-in");
+                buttonBox.classList.add("animate-in");
+
+                // Remove animate-in class after animation
+                setTimeout(() => {
+                    textBox.classList.remove("animate-in");
+                    imgBox.classList.remove("animate-in");
+                    buttonBox.classList.remove("animate-in");
+                }, 400);
+
+            }, 400); // match animation time
+        };
+    });
+});
+</script>
+</body>
 </html>
