--- a/plans.html
+++ b/plans.html
@@ -44,26 +44,27 @@
                             <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
                                 <div class="row g-4">
                                     <div class="col-md-4">
-                                        <a href="management.html" class="feature-item">Transparent Fee Management</a>
+                                        <a href="fee-management.html" class="feature-item">Transparent Fee Management</a>
                                         <div class="divider"></div>
-                                        <a href="study.html" class="feature-item">Share Notes / Study Materials</a>
+                                        <a href="study-material.html" class="feature-item">Share Notes / Study Materials</a>
                                         <div class="divider"></div>
-                                        <a href="homework.html" class="feature-item">Homework & Assignments</a>
+                                        <a href="assignments.html" class="feature-item">Homework & Assignments</a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="biometric.html" class="feature-item">Biometric Attendance</a>
+                                        <a href="biometric-attendance.html" class="feature-item">Biometric Attendance</a>
                                         <div class="divider"></div>
-                                        <a href="performance.html" class="feature-item">Student Performance</a>
+                                        <a href="student-performance.html" class="feature-item">Student Performance</a>
                                         <div class="divider"></div>
                                         <a href="reports.html" class="feature-item">Insightful Reports</a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="student.html" class="feature-item">Student / Parent App</a>
+                                        <a href="app.html" class="feature-item">Student / Parent App</a>
                                         <div class="divider"></div>
-                                        <a href="reminders.html" class="feature-item">Communication & Reminders</a>
+                                        <a href="communication.html" class="feature-item">Communication & Reminders</a>
                                     </div>
                                 </div>
                             </div>
+                            
                         </li>
                         <!-- COMPANY -->
                         <li class="nav-item dropdown mx-2">
@@ -81,14 +82,14 @@
                             <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
                                 <a href="careers.html" class="feature-item">Career</a>
                                 <div class="divider"></div>
-                                <a href="team-update.html" class="feature-item">Team</a>
+                                <a href="team.html" class="feature-item">Team</a>
                                 <div class="divider"></div>
-                                <a href="about-us.html" class="feature-item">About</a>
+                                <a href="our-story.html" class="feature-item">About</a>
                             </div>
                         </li>
                         <!-- PRICING -->
                         <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="pricing.html">Pricing</a>
+                            <a class="nav-link fw-semibold" href="plans.html">Pricing</a>
                         </li>
                         <!-- RESOURCES -->
                         <li class="nav-item dropdown mx-2">
@@ -106,16 +107,16 @@
                             <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
                                 <a href="#" class="feature-item">Blogs</a>
                                 <div class="divider"></div>
-                                <a href="testimonials.html" class="feature-item">Testimonials</a>
+                                <a href="customers.html" class="feature-item">Customers</a>
                             </div>
                         </li>
                         <!-- CONTACT -->
                         <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="contact.html">Contact Us</a>
+                            <a class="nav-link fw-semibold" href="contact-us.html">Contact Us</a>
                         </li>
                         <!-- LOGIN -->
                         <li class="nav-item ms-2 ms-lg-3">
-                            <a href="login.php" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
+                            <a href="login.html" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
                                 Log In
                             </a>
                         </li>
@@ -296,7 +297,7 @@
                                     <li>Track Students' Test Performance</li>
                                     <li>Have Payment Gateway Integration</li>
                                 </ul>
-                                <button class="btn app-signup-btn w-100 mt-4">Sign Up Now</button>
+                                <a href="sign-up.html"><button class="btn app-signup-btn w-100 mt-4">Sign Up Now</button></a>
                             </div>
                         </div>
                     </div>
@@ -326,15 +327,15 @@
             <div class="container">
                 <div class="row gy-4">
                     <!-- CONTACT -->
-                    <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">CONTACT</h6>
+                    <div class="col-6 col-md-3 ">
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">CONTACT</h6>
                         <p>+91-76666 62330</p>
                         <p>Support Helpdesk</p>
                         <p>Contact Us</p>
                     </div>
                     <!-- ABOUT US -->
                     <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">ABOUT US</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ABOUT US</h6>
                         <p>Blog</p>
                         <p>Engineering Blog</p>
                         <p>Careers</p>
@@ -343,39 +344,38 @@
                         <p>Terms of Service</p>
                         <p>How to Pay</p>
                         <button class="btn btn-sm button-footer mt-2 py-2 px-4">
-                            Make
-                                Payment
+                            Make Payment
                         </button>
                     </div>
                     <!-- PRODUCT -->
                     <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">PRODUCT</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">PRODUCT</h6>
                         <p>Tour</p>
                         <p>Plans & Pricing</p>
                         <p>Security</p>
-                        <h6 class="fw-bold mt-4 mb-3">EXTRAS</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;margin-top: 35px;">EXTRAS</h6>
                         <p>Download Attendpro</p>
                         <p>Examjoy</p>
                         <p>Download TeamViewer</p>
                     </div>
                     <!-- ADMIN APP + RESOURCES -->
                     <div class="col-6 col-md-3">
-                        <h6 class="fw-bold mb-3">ADMIN APP</h6>
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ADMIN APP</h6>
                         <img
                             src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
                             class="img-fluid mb-2"
                             width="130"
                             alt="image"
                             loading="lazy"
-                        >
+                        ><br>
                         <img
                             src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
                             class="img-fluid mb-4"
                             width="130"
                             alt="image"
                             loading="lazy"
-                        >
-                        <h6 class="fw-bold mb-3">RESOURCES</h6>
+                        > 
+                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">RESOURCES</h6>
                         <p>Free Resources</p>
                         <p>Case Studies</p>
                     </div>
