--- a/team.html
+++ b/team.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Class-Pro</title>
+        <title>Class-Pro team</title>
         <!-- Bootstrap 5 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- swiper slider link -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <!-- Custom CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+        <!-- Custom CSS -->
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <!-- NAVBAR -->
+        <!-- 🔹 NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
             <div class="container">
                 <a class="navbar-brand fs-3 main-logo" href="index.html">
@@ -127,122 +129,174 @@
         <!-- nav bar end -->
         <!-- main start -->
         <main>
-            <!-- HERO SECTION -->
-            <section class="job-detail-section py-5">
+            <!-- Team Section -->
+            <section class="team-section py-5">
                 <div class="container">
-                    <div class="row">
-                        <!-- JOB HEADER -->
-                        <div class="col-lg-6">
-                            <h2 class="job-title">Engineering</h2>
-                            <div class="job-meta d-flex align-items-center flex-wrap gap-3 mt-2">
-                                <span class="job-meta-item">
-                                    <img src="assets/image/careers/location.svg" alt="image" loading="lazy">
-                                    Mumbai
-                                </span>
-                                <span class="job-meta-item">
-                                    <img src="assets/image/careers/calender.svg" alt="image" loading="lazy">
-                                    26 Nov 2021
-                                </span>
-                            </div>
+                    <!-- Heading + Side Images -->
+                    <div class="row align-items-center">
+                        <div class="col-lg-7">
+                            <h2 class="team-title">Meet The Team Who
+                                <br>Made it All Possible
+                            </h2>
                         </div>
-                        <div class="col-lg-6">
-                            <!-- TAGS -->
-                            <div class="job-tags mt-3 d-flex flex-wrap gap-2">
-                                <span class="job-badge">JavaScript</span>
-                                <span class="job-badge">React Native</span>
-                                <span class="job-badge">Redux Developer</span>
+                        <div class="col-lg-5 text-lg-center text-center">
+                            <div class="side-images">
+                                <img src="assets/image/team-update/2.png" class="img-fluid side-img" alt="">
+                                <img src="assets/image/team-update/1.png" class="img-fluid side-img  start-padding" alt="">
                             </div>
                         </div>
                     </div>
-                    <hr>
-                    <!-- SECTION 1 -->
-                    <div class="job-block mb-5">
-                        <h5 class="job-block-title">What we do?</h5>
-                        <p class="job-desc">
-                            Classpro is India’s leading online software for coaching classes. With 1000+ coaching classes using it 
-                daily in 150+ cities, it is changing the way coaching classes manage their business in India.
-                We are a small team of young, highly enthusiastic, creative and performance-driven people who will do 
-                anything (literally) to deliver the best possible user experience to our customers.
-                        </p>
-                        <p class="job-desc">
-                            Interested to know more about how we use technology? See our engineering blog.
-                        </p>
+                    <hr class="my-5">
+                    <!-- Founders -->
+                    <h4 class="new-fonts mb-4">Our Founders</h4>
+                    <div class="row g-4">
+                        <!-- Founder Card -->
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group1.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Jayesh Gopalan</h6>
+                                    <a href="#" class="linkedin-icon " style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group2.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Jayesh Gopalan</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group3.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Jayesh Gopalan</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <hr>
-                    <!-- SECTION 2 -->
-                    <div class="job-block mb-5">
-                        <h5 class="job-block-title">What are we looking for ?</h5>
-                        <p class="job-desc">
-                            We are looking for talented Javascript developer who want to join our engineering team to build great 
-                application for Education domain. You will be taking a senior/lead role in building 
-                React / React Native / Javascript applications.
-                        </p>
-                        <p class="job-desc">
-                            The position requires a developer with experience developing modern web applications and mobile web apps 
-                using the latest technology. At Classpro we are using React & Javascript to build our next-generation platform.
-                        </p>
+                    <hr class="my-5">
+                    <!-- Founders -->
+                    <h4 class="new-fonts mb-4">Our Founders</h4>
+                    <div class="row g-4">
+                        <!-- Founder Card -->
+                        <div class="col-md-4 col-sm-12  sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group4.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Ankit Bandkar</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group5.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Sachin Gopalan</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group6.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Krutika Waghmare</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <hr>
-                    <!-- SECTION 3 -->
-                    <div class="job-block mb-5">
-                        <h5 class="job-block-title">Roles and Responsibilities:</h5>
-                        <ul class="job-list">
-                            <li>Understand requirements from Product Owner & convert visuals to interactive web interfaces.</li>
-                            <li>Develop new user-facing features.</li>
-                            <li>Write reusable code for future use.</li>
-                            <li>Ensure technical feasibility of UI/UX designs.</li>
-                            <li>Optimize application speed & scalability.</li>
-                            <li>Experience in a mainstream library/framework (ReactJS preferred).</li>
-                            <li>Collaborate with Designers, Product Managers & Backend Engineers.</li>
-                        </ul>
+                    <div class="row g-4">
+                        <!-- Founder Card -->
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group7.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Sameer Shaikh</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group8.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Suraj Noskar</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 sat-col">
+                            <div class="team-card text-center">
+                                <img src="assets/image/team-update/group9.png" class="team-photo" alt="">
+                                <div class="for-flex">
+                                    <h6 class="mt-3">Yagnesh Dudhmal</h6>
+                                    <a href="#" class="linkedin-icon" style="padding-top: 11px;">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <hr>
-                    <!-- SECTION 4 -->
-                    <div class="job-block mb-5">
-                        <h5 class="job-block-title">Skills & Requirements:</h5>
-                        <ul class="job-list">
-                            <li>Expert knowledge of React, React Native, Redux, Javascript, HTML, CSS & related packages.</li>
-                        </ul>
-                    </div>
-                    <hr>
-                    <!-- SECTION 5 -->
-                    <div class="job-block mb-5">
-                        <h5 class="job-block-title">Job perks:</h5>
-                        <ul class="job-list">
-                            <li>Learning Atmosphere & Fun Environment</li>
-                            <li>Saturday is a learning day</li>
-                            <li>Events & team activities</li>
-                            <li>Training and development budget</li>
-                            <li>3 - 8 LPA (may vary)</li>
-                        </ul>
-                    </div>
-                    <!-- APPLY BUTTON -->
-                    <div>
-                        <a href="#" class="job-apply-btn">Apply Now</a>
+                </div>
+                <div class="container py-4">
+                    <div class="row g-4">
+                        <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <img src="assets/image/team-update/software-suggest.png" class="img-fluid rounded" alt="">
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <img src="assets/image/team-update/award-winning.png" class="img-fluid rounded" alt="">
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <img src="assets/image/team-update/your-story.png" class="img-fluid rounded" alt="">
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center  align-items-center">
+                            <img src="assets/image/team-update/18-international.png" class="img-fluid rounded" alt="">
+                        </div>
                     </div>
                 </div>
             </section>
-        </main>
-        <!-- main end -->
-        <!-- footer -->
-        <section class="india-hero pt-5">
-            <div class="container py-lg-5 py-sm-3">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <h1 class="display-5">
-                            Made in India.
-                            <br>
-                            Made for the World.
-                        </h1>
-                    </div>
-                    <div class="col-lg-6 text-lg-end new-try">
-                        <a href="#" class="btn demo-btn px-4 py-3">Get Your Free Demo</a>
+            <!-- footer -->
+            <section class="india-hero pt-5">
+                <div class="container py-lg-5 py-sm-3">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <h1 class="display-5">
+                                Made in India.
+                                <br>
+                                Made for the World.
+                            </h1>
+                        </div>
+                        <div class="col-lg-6 text-lg-end new-try">
+                            <a href="#" class="btn demo-btn px-4 py-3">Get Your Free Demo</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- FOOTER SECTION -->
-        <footer class="footer-section text-white py-5">
+            </section>
+            <!-- FOOTER SECTION -->
+            <footer class="footer-section text-white py-5">
             <div class="container">
                 <div class="row gy-4">
                     <!-- CONTACT -->
@@ -301,8 +355,8 @@
                 </div>
             </div>
         </footer>
-    </section>
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+        </section>
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 </html>
