pull code commit

--- a/sign-up.html
+++ b/sign-up.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Signup Form</title>
+    <title>1-Week Free Coaching Management Software Trial | Book Demo</title>
+    <meta name="title" content="1-Week Free Coaching Management Software Trial | Book Demo">
+    <meta name="description" content="Experience Classpro with a 1-week free trial. See how coaching and tuition institutes manage admissions, fees, attendance and performance effortlessly.">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
