--- a/careers.html
+++ b/careers.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Class-Pro</title>
+         <title>Careers at Classpro | Join Our Growing Team</title>
+        <meta name="title" content="Careers at Classpro | Join Our Growing Team">
+        <meta name="description" content="Build your career with Classpro and help transform coaching institutes through technology. Explore open roles and apply today.">
         <!-- Bootstrap 5 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- swiper slider link -->
@@ -44,23 +46,23 @@
                             <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
                                 <div class="row g-4">
                                     <div class="col-md-4">
-                                        <a href="fee-management.html" class="feature-item">Transparent Fee Management</a>
+                                        <a href="features/fee-management.html" class="feature-item">Transparent Fee Management</a>
                                         <div class="divider"></div>
-                                        <a href="study-material.html" class="feature-item">Share Notes / Study Materials</a>
+                                        <a href="features/share-notes.html" class="feature-item">Share Notes / Study Materials</a>
                                         <div class="divider"></div>
-                                        <a href="assignments.html" class="feature-item">Homework & Assignments</a>
+                                        <a href="features/assignments.html" class="feature-item">Homework & Assignments</a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="biometric-attendance.html" class="feature-item">Biometric Attendance</a>
+                                        <a href="features/biometric-attendance.html" class="feature-item">Biometric Attendance</a>
                                         <div class="divider"></div>
-                                        <a href="student-performance.html" class="feature-item">Student Performance</a>
+                                        <a href="features/student-performance.html" class="feature-item">Student Performance</a>
                                         <div class="divider"></div>
-                                        <a href="reports.html" class="feature-item">Insightful Reports</a>
+                                        <a href="features/reports.html" class="feature-item">Insightful Reports</a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="app.html" class="feature-item">Student / Parent App</a>
+                                        <a href="features/app.html" class="feature-item">Student / Parent App</a>
                                         <div class="divider"></div>
-                                        <a href="communication.html" class="feature-item">Communication & Reminders</a>
+                                        <a href="features/communication.html" class="feature-item">Send Communication & Reminders</a>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +142,7 @@
                         </div>
                         <div class="col-md-5">
                             <div class="career-image-box">
-                                <img src="assets/image/careers/hero.jpg" alt="image" loading="lazy">
+                                <img src="assets/image/careers/hero.jpg" alt="hero" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -155,9 +157,9 @@
                             <div class="col-md-6">
                                 <h4 class="job-title">Engineering</h4>
                                 <p class="job-meta">
-                                    <img src="assets/image/careers/location.svg" alt="image" loading="lazy">
+                                    <img src="assets/image/careers/location.svg" alt="location" loading="lazy">
                                     Mumbai &nbsp;&nbsp;
-                                    <img src="assets/image/careers/calender.svg" alt="image" loading="lazy">
+                                    <img src="assets/image/careers/calender.svg" alt="calender" loading="lazy">
                                     26 Nov 2021
                                 </p>
                             </div>
@@ -180,9 +182,9 @@
                             <div class="col-md-6">
                                 <h4 class="job-title">Developer</h4>
                                 <p class="job-meta">
-                                    <img src="assets/image/careers/location.svg" alt="image" loading="lazy">
+                                    <img src="assets/image/careers/location.svg" alt="location" loading="lazy">
                                     Mumbai &nbsp;&nbsp;
-                                    <img src="assets/image/careers/calender.svg" alt="image" loading="lazy">
+                                    <img src="assets/image/careers/calender.svg" alt="calender" loading="lazy">
                                     26 Nov 2021
                                 </p>
                             </div>
@@ -216,11 +218,11 @@
                                     <img
                                         src="assets/image/careers/red.png"
                                         class="testi-user-img"
-                                        alt="image"
+                                        alt="icon"
                                         loading="lazy"
                                     >
                                     <div>
-                                        <h6 class=" for-headd">Mahesh Jadhavar</h6>
+                                        <h6 class="for-headd">Mahesh Jadhavar</h6>
                                         <span class="for-ariv">Ariv Education</span>
                                     </div>
                                 </div>
@@ -238,7 +240,7 @@
                                     <img
                                         src="assets/image/careers/red.png"
                                         class="testi-user-img"
-                                        alt="image"
+                                        alt="icon"
                                         loading="lazy"
                                     >
                                     <div>
@@ -260,7 +262,7 @@
                                     <img
                                         src="assets/image/careers/red.png"
                                         class="testi-user-img"
-                                        alt="image"
+                                        alt="icon"
                                         loading="lazy"
                                     >
                                     <div>
@@ -361,64 +363,105 @@
         </section>
         <!-- FOOTER SECTION -->
         <footer class="footer-section text-white py-5">
-            <div class="container">
-                <div class="row gy-4">
-                    <!-- CONTACT -->
-                    <div class="col-6 col-md-3 ">
-                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">CONTACT</h6>
-                        <p>+91-76666 62330</p>
-                        <p>Support Helpdesk</p>
-                        <p>Contact Us</p>
-                    </div>
-                    <!-- ABOUT US -->
-                    <div class="col-6 col-md-3">
-                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ABOUT US</h6>
-                        <p>Blog</p>
-                        <p>Engineering Blog</p>
-                        <p>Careers</p>
-                        <p>Team</p>
-                        <p>Privacy</p>
-                        <p>Terms of Service</p>
-                        <p>How to Pay</p>
-                        <button class="btn btn-sm button-footer mt-2 py-2 px-4">
-                            Make Payment
-                        </button>
-                    </div>
-                    <!-- PRODUCT -->
-                    <div class="col-6 col-md-3">
-                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">PRODUCT</h6>
-                        <p>Tour</p>
-                        <p>Plans & Pricing</p>
-                        <p>Security</p>
-                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;margin-top: 35px;">EXTRAS</h6>
-                        <p>Download Attendpro</p>
-                        <p>Examjoy</p>
-                        <p>Download TeamViewer</p>
-                    </div>
-                    <!-- ADMIN APP + RESOURCES -->
-                    <div class="col-6 col-md-3">
-                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ADMIN APP</h6>
-                        <img
-                            src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
-                            class="img-fluid mb-2"
-                            width="130"
-                            alt="image"
-                            loading="lazy"
-                        ><br>
-                        <img
-                            src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
-                            class="img-fluid mb-4"
-                            width="130"
-                            alt="image"
-                            loading="lazy"
-                        > 
-                        <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">RESOURCES</h6>
-                        <p>Free Resources</p>
-                        <p>Case Studies</p>
+                <div class="container">
+                    <div class="row gy-4">
+                        <!-- CONTACT -->
+                        <div class="col-6 col-md-3">
+                            <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">CONTACT</h6>
+                            <p>
+                                <a href="tel:+917666662330" class="text-white">+91-76666 62330</a>
+                            </p>
+                            <p>
+                                <a href=" https://classpro.freshdesk.com/support/home" class="text-white">Support Helpdesk</a>
+                            </p>
+                            <p>
+                                <a href="contact-us.html" class="text-white">Contact Us</a>
+                            </p>
+                        </div>
+                        <!-- ABOUT US -->
+                        <div class="col-6 col-md-3">
+                            <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ABOUT US</h6>
+                            <p>
+                                <a href="#" class="text-white">Blog</a>
+                            </p>
+                            <p>
+                                <a href="https://engineering.classpro.in/" class="text-white">Engineering Blog</a>
+                            </p>
+                            <p>
+                                <a href="careers.html" class="text-white">Careers</a>
+                            </p>
+                            <p>
+                                <a href="team.html" class="text-white">Team</a>
+                            </p>
+                            <p>
+                                <a href="#" class="text-white">Privacy</a>
+                            </p>
+                            <p>
+                                <a href="term.html" class="text-white">Terms of Service</a>
+                            </p>
+                            <p>
+                                <a href="#" class="text-white">How to Pay</a>
+                            </p>
+                            <button class="btn btn-sm button-footer mt-2 py-2 px-4">
+                                Make Payment
+                            </button>
+                        </div>
+                        <!-- PRODUCT -->
+                        <div class="col-6 col-md-3">
+                            <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">PRODUCT</h6>
+                            <p>
+                                <a href="" class="text-white">Tour</a>
+                            </p>
+                            <p>
+                                <a href="plans.html" class="text-white">Plans & Pricing</a>
+                            </p>
+                            <p>
+                                <a href="#" class="text-white">Security</a>
+                            </p>
+                            <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;margin-top: 35px;">EXTRAS</h6>
+                            <p>
+                                <a href="#" class="text-white">Download Attendpro</a>
+                            </p>
+                            <p>
+                                <a href="#" class="text-white">Examjoy</a>
+                            </p>
+                            <p>
+                                <a href="#" class="text-white">Download TeamViewer</a>
+                            </p>
+                        </div>
+                        <!-- ADMIN APP + RESOURCES -->
+                        <div class="col-6 col-md-3">
+                            <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">ADMIN APP</h6>
+                            <a href="https://play.google.com" target="_blank">
+                                <img
+                                    src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
+                                    class="img-fluid mb-2"
+                                    width="130"
+                                    alt="Download on Google Play"
+                                    loading="lazy"
+                                >
+                            </a>
+                            <br>
+                            <a href="https://www.apple.com/app-store/" target="_blank">
+                                <img
+                                    src="https://developer.apple.com/../assets/elements/badges/download-on-the-app-store.svg"
+                                    class="img-fluid mb-4"
+                                    width="130"
+                                    alt="Download on App Store"
+                                    loading="lazy"
+                                >
+                            </a>
+                            <h6 class="mb-4" style="opacity: 0.4;font-weight: 400;">RESOURCES</h6>
+                            <p>
+                                <a href="#" class="text-white">Free Resources</a>
+                            </p>
+                            <p>
+                                <a href="#" class="text-white">Case Studies</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
+            </footer>
     </section>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
