--- a/login.html
+++ b/login.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Classpro Login | Access Your Coaching Institute Dashboard</title>
+    <meta name="title" content="Classpro Login | Access Your Coaching Institute Dashboard">
+    <meta name="description" content="Log in to manage admissions, fees, attendance, batches, performance and communication on your secure Classpro dashboard.">
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
